examples/datalog/18_advanced_patterns/121_materialized_view.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mat_view
Knowledge graph 'test_mat_view' created.
Switched to knowledge graph: test_mat_view
> .kg use test_mat_view
Switched to knowledge graph: test_mat_view
> +orders[(1, 100, "2024-01"), (2, 200, "2024-01"), (3, 150, "2024-02")].
Inserted 3 fact(s) into 'orders'.
> +monthly_total(Month, <SUM:Amount>) :- orders(_, Amount, Month).
Script error: Parse error: Invalid term: '<SUM:Amount>'
